Return to work with single file
